--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,5 @@
     "plugins": ["transform-vue-jsx", "transform-runtime", ["component", [{
         "libraryName": "mint-ui",
         "style": true
-    }]]]
+    }]], "transform-remove-strict-mode"]
 }
