--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "mint-ui": "^2.2.13",
+    "moment": "^2.21.0",
     "vue": "^2.5.2",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1"
   },
@@ -22,6 +24,7 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^1.1.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
