--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.5.2",
     "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
